// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ storybook ] [ Layout/Spacer/Default ] should render Default 1`] = `
<DocumentFragment>
  <div
    class="spacer is-playground"
    style="display: inline-block; width: 0px; height: 0px;"
  />
</DocumentFragment>
`;

exports[`[ storybook ] [ Layout/Spacer/Default ] should render Sizes 1`] = `
<DocumentFragment>
  <div
    class="spacer is-playground"
    style="display: inline-block; width: 0px; height: 0px;"
  />
  <div
    class="spacer is-playground"
    style="display: inline-block; width: 5px; height: 5px;"
  />
  <div
    class="spacer is-playground"
    style="display: inline-block; width: 15px; height: 15px;"
  />
  <div
    class="spacer is-playground"
    style="display: inline-block; width: 20px; height: 20px;"
  />
  <div
    class="spacer is-playground"
    style="display: inline-block; width: 40px; height: 40px;"
  />
</DocumentFragment>
`;
